--- a/web/index.html
+++ b/web/index.html
@@ -7,10 +7,28 @@
     label {
       color: gray;
     }
+
+    input::-webkit-calendar-picker-indicator {
+      display: none;
+    }
+
+    .hide-input {
+      width: 0;
+      height: 0;
+      padding: 0;
+      border: 0;
+      margin: 0;
+    }
   </style>
 </head>
 <body>
 <form id="formElem">
+  <input
+    class="hide-input"
+    type="submit"
+    aria-hidden="true"
+    tabindex="-1"
+  >
   <label for="env">env</label>
   <input type="text" id="env" name="env" value="trunk">
   <label for="site">site</label>
@@ -21,6 +39,100 @@
 </form>
 
 <script>
+
+  /**
+   * создание селектора из массива данных
+   * @param input - форма, в которой находится селектор
+   * @param optionsData - массив данных для селектора
+   * @param currentInputData - текущий объекта
+   */
+  var createInputWithOptions = function (input, optionsData, currentInputData) {
+    var selectIdPostfix = 'Select';
+    var dataListIdPostfix = 'DataList';
+    var buttonIdPostfix = 'Button';
+
+    var buttonTextOpen = '▲';
+    var buttonTextClose = '▼';
+
+    var HTMLOption = function (value, isSelected) {
+      return '<option ' + (isSelected ? 'selected ' : '') + 'value="' + value + '">' + value + '</option>';
+    };
+
+    var rootElement = document.createElement('div');
+    var dataList = document.createElement('dataList');
+    var select = document.createElement('select');
+    var button = document.createElement('button');
+
+    rootElement.id = input.id + 'Wrapper';
+    rootElement.style = "display: inline-block;";
+    input.setAttribute('list', input.id + dataListIdPostfix);
+    dataList.id = input.getAttribute('list');
+    dataList.style.position = 'absolute';
+
+    var HTMLOptions = '';
+    for (var i = 0; i < optionsData.length; i++) {
+      var optionData = optionsData[i];
+      var isSelected = optionData === currentInputData;
+      HTMLOptions += HTMLOption(optionData, isSelected);
+    }
+
+    select.setAttribute('size', optionsData.length);
+    select.multiple = true;
+    select.style.overflow = 'hidden';
+    select.id = input.id + selectIdPostfix;
+
+    button.innerText = buttonTextClose;
+    button.id = input.id + buttonIdPostfix;
+
+    function hideDataList() {
+      dataList.style.display = '';
+      button.innerText = buttonTextClose;
+    }
+
+    button.onclick = function (event) {
+      event.preventDefault();
+
+      if (dataList.style.display === '') {
+        dataList.style.display = 'block';
+        this.textContent = buttonTextOpen;
+        var currentOptionValue = input.value;
+        for (var i = 0; i < optionsData.length; i++) {
+          if (optionsData[i] === currentOptionValue) {
+            select.selectedIndex = i;
+            break;
+          }
+        }
+      } else {
+        hideDataList();
+      }
+    };
+
+    function fillFormWithOptions(event) {
+      input.value = optionsData[event.target.selectedIndex];
+      hideDataList();
+    }
+
+    select.onchange = fillFormWithOptions;
+    input.onfocus = hideDataList;
+
+    input.value = currentInputData;
+    select.innerHTML = HTMLOptions;
+    dataList.appendChild(select);
+
+    var inputClone = input.cloneNode(true);
+    rootElement.appendChild(inputClone);
+    rootElement.appendChild(dataList);
+    rootElement.appendChild(button);
+    input.parentElement.insertBefore(rootElement, input);
+
+    input.parentNode.removeChild(input);
+    input = inputClone;
+    return input.id;
+  };
+
+  createInputWithOptions(document.getElementById('env'), [1, 2, 3, 4], 1);
+  createInputWithOptions(document.getElementById('site'), [1, 2, 3, 4], 1);
+
   formElem.onsubmit = async (e) => {
 
     const url = 'http://fosemberg.dev.test-ru.dom:3000';
