change build project

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <label for="env">env</label>
   <input type="text" id="env" name="env" value="trunk">
   <label for="site">site</label>
-  <input type="text" id="site" name="site" value="some-site">
+  <input type="text" id="site" name="site" value="site-global">
   <label for="tag">tag</label>
   <input type="text" id="tag" name="tag" value="1.58">
   <input type="submit" value="Run test">
