--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <input type="text" id="tag" name="tag" value="1.58">
   <input type="submit" value="Run test">
 </form>
+<pre id="output"></pre>
 
 <script src="index.js"></script>
 </body>
