--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <label for="site">site</label>
   <input type="text" id="site" name="site" value="site-global">
   <label for="tag">tag</label>
-  <input type="text" id="tag" name="tag" value="1.58">
+  <input type="text" id="tag" name="tag" placeholder="1.58">
   <input type="submit" value="Run test">
 </form>
 <pre id="output"></pre>
